<resources>

    <string name="channel_id">HAchannel_id</string>
    <string name="channel_name">HAchannelName</string>

    <string name="app_name">Health Advertiser</string>
    <string name="lat">Lat:</string>
    <string name="lng">Long:</string>
    <string name="button">Button</string>
    <string name="title_activity_home_map">Map</string>
    <string name="next">Next</string>
    <string name="set_home_address">Set Home location</string>
    <string name="select_location">Select location</string>
    <string name="get_current_place">Get Current Place</string>

    <!-- Strings related to SignUp -->
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="set_location">Set Location</string>
    <string name="login">login</string>
    <string name="already_signed_up">already signed up?</string>
    <string name="start">Start</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="new_signup">New? SignUp</string>


    <string name="switch_mindful_key">switch_mindful_key</string>
    <string name="switch_notificationSounds">switch_notificationSounds</string>
    <string name="Goal_prefs">Goals</string>
    <string name="Notification_prefs">Notifications</string>
    <string name="Wallpaper_prefs">Wallpaper</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="isFirstRun">true</string>

    <string name="NotificationTitle">Health Advertiser Notification!</string>
    <string name="setting_button">setting_button</string>
    <string name="large_applogo">large_appLogo</string>
    <string name="new_notification">New Notification</string>
    <string name="skip">Skip</string>
    <string name="fruits_pic">fruits_pic</string>
    <string name="start_pic">start_pic</string>
    <string name="firstactivitylogo">firstActivityLogo</string>

    <string name="preference1">Mindful</string>
    <string name="preference2">Weightloss</string>

    <string name="notification1">Don\'t forget to eat a healthy balanced meal</string>
    <string name="notification2">Eat at least 5 vegetables per day for a healthy soul and body</string>
    <string name="notification3">Eating in front of TV increases amount eaten by 30%! eat infront of a table, no distractions</string>
    <string name="notification4">Pay attention to your hunger and satiety levels, listen to your body</string>
    <string name="notification5">Eat only until satiated, this will keep your energy high </string>
    <string name="notification6">When hungry- eat a balanced meal, provide your body\'s needs</string>
    <string name="notification7">Go exercise if you have time, you will thank yourself later</string>
    <string name="notification8">Eating late at night may cause weight gain, try to avoid the night snacking</string>

    <string name="home">Home</string>
    <string name="work">Work</string>
    <string name="geofence_enter">GEOFENCE_TRANSITION_ENTER</string>
    <string name="geofence_exit">GEOFENCE_TRANSITION_EXIT</string>

    <string name="database_imageurl_rootName">ImagesUrls</string>
    <string name="change_wallpaper">change wallpaper</string>
    <string name="send_notification">Send notification</string>
    <string name="goal_setting_text">Choose the goals of interest in order to get personalized content</string>

</resources>
