<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.StartActivity">

    <Button
        android:id="@+id/start_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="255dp"
        android:onClick="onClick"
        android:text="@string/start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/already_SU_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/already_signed_up"
        app:layout_constraintBaseline_toBaselineOf="@+id/logIn_text"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/logIn_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="38dp"
        android:onClick="onClickLogin"
        android:text="@string/login"
        android:textColorHighlight="@color/colorAccent"
        app:layout_constraintStart_toEndOf="@+id/already_SU_text"
        app:layout_constraintTop_toBottomOf="@+id/start_button"
        tools:textColorHighlight="@color/colorAccent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="204dp"
        android:layout_height="289dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="13dp"
        android:contentDescription="@string/start_pic"
        app:layout_constraintBottom_toTopOf="@+id/start_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/orange_eyes" />
</android.support.constraint.ConstraintLayout>